# rust-tutorial

./: README.md  flake.nix
advance_1/: .gitignore  Assignment.md  MakeWorkflow.md  Makefile  ManualWorkflow.md  setup_guide.md
advance_1/backend/: .env  Cargo.toml
advance_1/backend/docs/: initial_db.sql
advance_1/backend/src/: main.rs  user_store.rs
advance_1/backend/src/db/: db.rs  mod.rs  user_repository.rs
advance_1/backend/src/handlers/: auth.rs  user.rs
advance_1/backend/src/middleware/: auth.rs  mod.rs  swagger.rs  trans.rs
advance_1/backend/src/models/: auth.rs  common.rs  user.rs
advance_1/backend/src/services/: mod.rs  tokenizer.rs  user_service.rs
advance_1/docker/: docker-compose.yaml
advance_1/docs/: advance_1.excalidraw
advance_1/docs/rust/: create user.yml  delete user.yml  get all users.yml  get user.yml  opencollection.yml  update user.yml
day_2_3/: 2-rules.md
day_4/: 1-noi_dung.md  2-ai-reference.md
day_4/sample/src/: main.rs  main.ts  smart_pointer.rs
day_5/: 1_noi_dung.md  2_bai_tap.md
day_5/sample/src/: main.rs
material/: ai.excalidraw
material/git/: Bắt đầu với Git__.md
