[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# web application use as REST api
axum = "0.8.8"

# serialize json <-> struct
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# io library
tokio = { version = "1.50.0", features = ["full"] }
